# NumMeth-C-edition

./: .gitignore  CMakeLists.txt
lab1/: lab1.c  lab1.h  lab1.m  main.c  p_bi_se_off.txt  p_bi_se_prec.txt  p_bisect.txt  p_secant.txt  t_bi_se_off.txt  t_bi_se_prec.txt  t_bisect.txt  t_secant.txt
lab2/: generate_mat.py  lab2.c  lab2.h  lab2.m  main.c  matrix4_4.txt  matrix4_4f.txt
lab2/gen_files/: gen_mat10_1.txt  gen_mat10_9000.txt  gen_mat11_1500.txt  gen_mat11_4500.txt  gen_mat11_5999.txt  gen_mat12_2.txt  gen_mat12_5749.txt  gen_mat12_8750.txt  gen_mat13_6.txt  gen_mat13_750.txt  gen_mat13_9999.txt  gen_mat14_14.txt  gen_mat14_2750.txt  gen_mat14_4999.txt  gen_mat14_9500.txt  gen_mat15_3.txt  gen_mat16_17.txt  gen_mat17_3000.txt  gen_mat19_500.txt  gen_mat21_6249.txt  gen_mat21_7999.txt  gen_mat21_8250.txt  gen_mat22_4749.txt  gen_mat23_11.txt  gen_mat23_1999.txt  gen_mat24_5.txt  gen_mat26_5500.txt  gen_mat27_4250.txt  gen_mat29_7000.txt  gen_mat29_9249.txt  gen_mat30_5250.txt  gen_mat32_6499.txt  gen_mat33_7749.txt  gen_mat34_13.txt  gen_mat34_4000.txt  gen_mat36_1749.txt  gen_mat36_7499.txt  gen_mat40_7249.txt  gen_mat42_6749.txt  gen_mat43_15.txt  (+20 more)
lab3/: conj.c  conj.h  gen_mat.py  lab3.c  lab3.h  lab3.m  main.c
lab3/gen_data/: prec.txt  sols.txt
lab3/gen_files/: gen_mat.txt  gen_sols.txt
lab3/test_data/: mat3_3.txt
lab4/: gen_mat.py  invit.c  invit.h  lab4.m  main.c  utils.c  utils.h
lab4/gen_data/: gen_mat_11_0.0001.txt  gen_mat_11_0.001.txt  gen_mat_11_0.01.txt  gen_mat_11_0.1.txt  gen_mat_11_1.txt  gen_mat_11_1e-05.txt  gen_mat_11_1e-08.txt  (+10 more)
(+20 files in other folders)
